--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-intl": "^3.23.5",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.8",
